--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,22 @@ main {
 .switch {
   font-size: 3rem;
 }
+
+.catModal {
+  background-color: white;
+  height:90vh;
+  width: 90vw;
+  margin: 5vh 5vw;
+  padding: 3rem;
+  box-sizing: border-box;
+  border-radius: 1vmax;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.catModal img {
+  width: 100%;
+  border-radius: 1vmax;
+}
